Fix navbar display, fix link scroll menu on safari/iOS

--- a/styles/index.css
+++ b/styles/index.css
@@ -43,12 +43,11 @@ div.nav-logo {
     position: absolute;
     left: 16px;
     top: -12px;
-    background: url("/assets/logo/nav-mobile-360x280.png");
+    background: url("../assets/logo/nav-mobile-360x280.png");
     background-size: cover;
     border-radius: 50%;
 }
 
-/* To delete 1st only */
 div.contact-logo img {
     position: absolute;
     top: 0;
@@ -138,7 +137,9 @@ nav.mobile-menu div.menu li:nth-of-type(4) {
 
 nav.mobile-menu div.menu li a {
     position: absolute;
-    display: block;
+    display: inline-block;
+    left: 0;
+    top: auto;
     height: 60px;
     width: 100vw;
 }
@@ -389,7 +390,8 @@ footer form {
 
 footer form input,
 textarea,
-label {
+label,
+footer form button {
     display: block;
     position: relative;
     top: 0;
@@ -406,7 +408,8 @@ footer form label {
 }
 
 footer form input,
-textarea {
+textarea,
+footer form button {
     background-color: rgb(225, 213, 195);
     font-family: 'Lato', sans-serif, Arial, Helvetica;
     font-style: italic;
@@ -423,7 +426,7 @@ footer form textarea {
     padding: 10px;
 }
 
-footer form input:last-child {
+footer form button {
     padding: 10px 40px;
     background-color: rgba(112, 112, 112, 0.3);
     color: rgb(201, 157, 124);
@@ -606,6 +609,7 @@ nav.mobile.animation {
     }
 
     nav.mobile-menu div.menu li {
+        height: 60px;
         line-height: 60px;
         margin: 45px 0;
         font-size: 2.5rem;
@@ -769,7 +773,7 @@ nav.mobile.animation {
         font-size: 1.2rem;
     }
 
-    footer form input:last-child {
+    footer form button {
         font-size: 1.3rem;
         padding: 10px 50px;
     }
@@ -986,7 +990,7 @@ nav.mobile.animation {
         font-size: 1.4rem;
     }
 
-    footer form input:last-child {
+    footer form button {
         font-size: 1.5rem;
         padding: 10px 50px;
     }
@@ -1242,7 +1246,7 @@ nav.mobile.animation {
         font-size: 2rem;
     }
 
-    footer form input:last-child {
+    footer form button {
         width: auto;
         font-size: 2rem;
         padding: 15px 70px;
